// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image renders optional props 1`] = `
<picture
  class="image"
>
  <!---->
   
  <img
    alt="Foo"
    class="lazyload"
    data-optimumx="auto"
    data-sizes="auto"
    data-src="/image.jpg?fl=progressive&f=faces&q=50&w=200"
    data-srcset="/image.jpg?fl=progressive&f=faces&q=50&w=200 200w"
  />
</picture>
`;

exports[`Image renders required props 1`] = `
<picture
  class="image"
>
  <!---->
   
  <img
    alt="Foo"
    class="lazyload"
    data-optimumx="auto"
    data-sizes="auto"
    data-src="/image.jpg"
    data-srcset="/image.jpg"
  />
</picture>
`;

exports[`Image renders sources with webp flag 1`] = `
<picture
  class="image"
>
  <source
    data-optimumx="auto"
    data-sizes="auto"
    data-srcset="/image.jpg?fm=webp"
    type="image/webp"
  />
  <source
    data-optimumx="auto"
    data-sizes="auto"
    data-srcset="/image.jpg?fm=jpg"
    type="image/jpeg"
  />
   
  <img
    alt="Foo"
    class="lazyload"
    data-optimumx="auto"
    data-sizes="auto"
    data-src="/image.jpg"
    data-srcset="/image.jpg"
  />
</picture>
`;
